--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,9 @@ email: jy2ma@virginia.edu
 description: >- # this means to ignore newlines until "baseurl:"
   I am a machine learning engineer at <a href="https://hyperconnect.com/en/">Hyperconnect</a>.
   Previously, I got my B.A. and M.S. from University of Virginia where I was advised by <a href="https://www.cs.virginia.edu/yanjun/">Yanjun Qi</a>.
-  I primarily work on natural language processing (NLP).
+research_interest:
+  My current research interests are in open-domain conversation agents and natural language generation.
+  While at UVA, I primarily worked on adversarial robustness of NLP models.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "jinyongyoo" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jinyongyoo
